fix dark mode icons

--- a/assets/css/themes/alberta.css
+++ b/assets/css/themes/alberta.css
@@ -27,6 +27,15 @@
   display: inline-block;
 }
 
+[data-wc-theme="dark"] .attachments-block a {
+  border: 1px solid rgb(var(--color-primary-300));
+  color: rgb(var(--color-primary-300));
+  padding: 0.2rem 0.4rem;
+  border-radius: 0.2rem;
+  margin-right: 0.25rem;
+  display: inline-block;
+}
+
 .attachments-block a:hover {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
